alignment correction

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -162,6 +162,7 @@ body {
   .home-buttons {
     width: 100%;
     margin-top: 20px;
+    justify-content: center;
   }
 
   .btn {
